--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
+authors = ["hexium310 <hexium310@gmail.com>"]
 name = "twitter"
 version = "0.1.0"
-authors = ["hexium310 <hexium310@gmail.com>"]
 
 [dependencies]
-rand = "0.3"
-base64 = "*"
-hyper = "*"
-hyper-native-tls = "*"
-serde_json = "*"
-rust-crypto = "^0.2"
-time = "*"
-url = "*"
+base64 = "0.5.2"
+hyper = "0.10.11"
+hyper-native-tls = "0.2.3"
+rand = "0.3.15"
+rust-crypto = "0.2.36"
+serde_json = "1.0.2"
+time = "0.1.37"
+url = "1.4.1"
