--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ rand = "0.3.15"
 rust-crypto = "0.2.36"
 serde_json = "1.0.2"
 time = "0.1.37"
-url = "1.4.1"
+url = "2.1.0"
+percent-encoding = "2.1.0"
